@@ -4,18 +4,18 @@ import (
 	"fmt"
 	"time"
 	"sort"
-	"strings"
 	"regexp"
 	"net/http"
+	"encoding/json"
 	"encoding/binary"
 	"github.com/piotrnar/gocoin/lib/btc"
 	"github.com/piotrnar/gocoin/client/common"
 )
 
 type omv struct {
+	unknown_miner bool
 	cnt int
 	bts uint64
-	mid int
 	fees uint64
 	ebad_cnt int
 	segwit_cnt int
@@ -46,132 +46,8 @@ func p_miners(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	common.ReloadMiners()
-
-	m := make(map[string] omv, 20)
-	var om omv
-	cnt := 0
-	common.Last.Mutex.Lock()
-	end := common.Last.Block
-	common.Last.Mutex.Unlock()
-	var lastts int64
-	var diff float64
-	var totbts uint64
-	var totfees uint64
-	current_mid := -1
-	now := time.Now().Unix()
-
-	common.LockCfg()
-	minerid := common.CFG.Beeps.MinerID
-	common.UnlockCfg()
-
-	next_diff_change := 2016-end.Height%2016
-
-	eb_ad_x := regexp.MustCompile("/EB[0-9]+/AD[0-9]+/")
-
-	for ; end!=nil; cnt++ {
-		if now-int64(end.Timestamp()) > int64(common.CFG.MiningStatHours)*3600 {
-			break
-		}
-		lastts = int64(end.Timestamp())
-		bl, _, e := common.BlockChain.Blocks.BlockGet(end.BlockHash)
-		if e != nil {
-			break
-		}
-
-		block, e := btc.NewBlock(bl)
-		if e != nil {
-			break
-		}
-
-		cbasetx, _ := btc.NewTx(bl[block.TxOffset:])
-
-		diff += btc.GetDifficulty(end.Bits())
-		miner, mid := common.TxMiner(cbasetx)
-		if mid==-1 {
-			miner = "<i>" + miner + "</i>"
-		}
-		om = m[miner]
-		om.cnt++
-		om.bts+= uint64(len(bl))
-		om.mid = mid
-
-		// Blocks reward
-		var rew uint64
-		for o := range cbasetx.TxOut {
-			rew += cbasetx.TxOut[o].Value
-		}
-		om.fees += rew - btc.GetBlockReward(end.Height)
-
-		if eb_ad_x.Find(cbasetx.TxIn[0].ScriptSig) != nil {
-			om.ebad_cnt++
-		}
-
-		if end.BlockVersion()==0x20000002 {
-			om.segwit_cnt++
-		}
-
-		m[miner] = om
-		if mid!=-1 && current_mid==-1 && minerid==string(common.MinerIds[mid].Tag) {
-			current_mid = mid
-		}
-		totbts += uint64(len(bl))
-		end = end.Parent
-	}
-
-	if cnt==0 {
-		write_html_head(w, r)
-		w.Write([]byte(fmt.Sprint("No blocks in last ", common.CFG.MiningStatHours, " hours")))
-		write_html_tail(w)
-		return
-	}
-
-	srt := make(onemiernstat, len(m))
-	i := 0
-	for k, v := range m {
-		srt[i].name = k
-		srt[i].omv = v
-		i++
-	}
-	sort.Sort(srt)
-
-	mnrs := load_template("miners.html")
-	onerow := load_template("miners_row.html")
-
-	diff /= float64(cnt)
-	bph := float64(cnt)/float64(common.CFG.MiningStatHours)
-	hrate := bph/6 * diff * 7158278.826667
-	mnrs = strings.Replace(mnrs, "{MINING_HOURS}", fmt.Sprint(common.CFG.MiningStatHours), 1)
-	mnrs = strings.Replace(mnrs, "{BLOCKS_COUNT}", fmt.Sprint(cnt), 1)
-	mnrs = strings.Replace(mnrs, "{FIRST_BLOCK_TIME}", time.Unix(lastts, 0).Format("2006-01-02 15:04:05"), 1)
-	mnrs = strings.Replace(mnrs, "{AVG_BLOCKS_PER_HOUR}", fmt.Sprintf("%.2f", bph), 1)
-	mnrs = strings.Replace(mnrs, "{AVG_DIFFICULTY}", common.NumberToString(diff), 1)
-	mnrs = strings.Replace(mnrs, "{AVG_HASHDATE}", common.HashrateToString(hrate), 1)
-	mnrs = strings.Replace(mnrs, "{AVG_BLOCKSIZE}", fmt.Sprintf("%.1fKB", float64(totbts)/float64(cnt)/1000), 1)
-	mnrs = strings.Replace(mnrs, "{DIFF_CHANGE_IN}", fmt.Sprint(next_diff_change), 1)
-	mnrs = strings.Replace(mnrs, "{MINER_MON_IDX}", fmt.Sprint(current_mid), 1)
-
-	for i := range srt {
-		s := onerow
-		s = strings.Replace(s, "{MINER_NAME}", srt[i].name, 1)
-		s = strings.Replace(s, "{BLOCK_COUNT}", fmt.Sprint(srt[i].cnt), 1)
-		s = strings.Replace(s, "{TOTAL_PERCENT}", fmt.Sprintf("%.0f", 100*float64(srt[i].cnt)/float64(cnt)), 1)
-		s = strings.Replace(s, "{MINER_HASHRATE}", common.HashrateToString(hrate*float64(srt[i].cnt)/float64(cnt)), 1)
-		s = strings.Replace(s, "{AVG_BLOCK_SIZE}", fmt.Sprintf("%.1fKB", float64(srt[i].bts)/float64(srt[i].cnt)/1000), 1)
-		s = strings.Replace(s, "{MINER_ID}", fmt.Sprint(srt[i].mid), -1)
-		s = strings.Replace(s, "<!--TOTAL_FEES-->", btc.UintToBtc(srt[i].fees), -1)
-		s = strings.Replace(s, "<!--FEE_PER_BYTE-->", fmt.Sprint(srt[i].fees/srt[i].bts), -1)
-		s = strings.Replace(s, "<!--EBAD_CNT-->", fmt.Sprint(srt[i].ebad_cnt), -1)
-		s = strings.Replace(s, "<!--SEGWIT_CNT-->", fmt.Sprint(srt[i].segwit_cnt), -1)
-		mnrs = templ_add(mnrs, "<!--MINER_ROW-->", s)
-		totfees += srt[i].fees
-	}
-
-	mnrs = strings.Replace(mnrs, "<!--TOTAL_MINING_FEES-->", btc.UintToBtc(totfees), 1)
-	mnrs = strings.Replace(mnrs, "<!--AVERAGE_FEE_PER_BYTE-->", fmt.Sprint(totfees/totbts), 1)
-
 	write_html_head(w, r)
-	w.Write([]byte(mnrs))
+	w.Write([]byte(load_template("miners.html")))
 	write_html_tail(w)
 }
 
@@ -201,4 +77,139 @@ func json_blkver(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 	w.Write([]byte("]"))
+}
+
+
+func json_miners(w http.ResponseWriter, r *http.Request) {
+	if !ipchecker(r) {
+		return
+	}
+
+	type one_miner_row struct {
+		Unknown bool
+		Name string
+		Blocks int
+		TotalFees, TotalBytes uint64
+		BUcnt, SWcnt int
+	}
+
+	type the_mining_stats struct {
+		MiningStatHours uint
+		BlockCount uint
+		FirstBlockTime int64
+		AvgBlocksPerHour float64
+		AvgDifficulty float64
+		AvgHashrate float64
+		NextDiffChange uint32
+		Miners []one_miner_row
+	}
+
+	common.ReloadMiners()
+
+	m := make(map[string] omv, 20)
+	var om omv
+	cnt := uint(0)
+	common.Last.Mutex.Lock()
+	end := common.Last.Block
+	common.Last.Mutex.Unlock()
+	var lastts int64
+	var diff float64
+	now := time.Now().Unix()
+
+	next_diff_change := 2016-end.Height%2016
+
+	eb_ad_x := regexp.MustCompile("/EB[0-9]+/AD[0-9]+/")
+
+	for ; end!=nil; cnt++ {
+		if now-int64(end.Timestamp()) > int64(common.CFG.MiningStatHours)*3600 {
+			break
+		}
+		lastts = int64(end.Timestamp())
+		bl, _, e := common.BlockChain.Blocks.BlockGet(end.BlockHash)
+		if e != nil {
+			break
+		}
+
+		block, e := btc.NewBlock(bl)
+		if e != nil {
+			break
+		}
+
+		cbasetx, _ := btc.NewTx(bl[block.TxOffset:])
+
+		diff += btc.GetDifficulty(end.Bits())
+		miner, mid := common.TxMiner(cbasetx)
+		om = m[miner]
+		om.cnt++
+		om.bts+= uint64(len(bl))
+		om.unknown_miner = (mid==-1)
+
+		// Blocks reward
+		var rew uint64
+		for o := range cbasetx.TxOut {
+			rew += cbasetx.TxOut[o].Value
+		}
+		om.fees += rew - btc.GetBlockReward(end.Height)
+
+		if eb_ad_x.Find(cbasetx.TxIn[0].ScriptSig) != nil {
+			om.ebad_cnt++
+		}
+
+		if end.BlockVersion()==0x20000002 {
+			om.segwit_cnt++
+		}
+
+		m[miner] = om
+
+		end = end.Parent
+	}
+
+	if cnt==0 {
+		w.Write([]byte("{}"))
+		return
+	}
+
+
+	srt := make(onemiernstat, len(m))
+	i := 0
+	for k, v := range m {
+		srt[i].name = k
+		srt[i].omv = v
+		i++
+	}
+	sort.Sort(srt)
+
+	var stats the_mining_stats
+
+	diff /= float64(cnt)
+	bph := float64(cnt)/float64(common.CFG.MiningStatHours)
+	hrate := bph/6 * diff * 7158278.826667
+
+	stats.MiningStatHours = common.CFG.MiningStatHours
+	stats.BlockCount = cnt
+	stats.FirstBlockTime = lastts
+	stats.AvgBlocksPerHour = bph
+	stats.AvgDifficulty = diff
+	stats.AvgHashrate = hrate
+	stats.NextDiffChange = next_diff_change
+
+	stats.Miners = make([]one_miner_row, len(srt))
+	for i := range srt {
+		stats.Miners[i].Unknown = srt[i].unknown_miner
+		stats.Miners[i].Name = srt[i].name
+		stats.Miners[i].Blocks = srt[i].cnt
+		stats.Miners[i].TotalFees = srt[i].fees
+		stats.Miners[i].TotalBytes = srt[i].bts
+		stats.Miners[i].BUcnt = srt[i].ebad_cnt
+		stats.Miners[i].SWcnt = srt[i].segwit_cnt
+	}
+
+	bx, er := json.Marshal(stats)
+	if er == nil {
+		w.Header()["Content-Type"] = []string{"application/json"}
+		w.Write(bx)
+	} else {
+		println(er.Error())
+	}
+
 }
