@@ -1,15 +1,0 @@
-<tr class="hov" id="midrow{MINER_ID}">
-	<td>{MINER_NAME}
-	<td align="right">{BLOCK_COUNT}
-	<td align="right"><i style="color:#00b000"><script>{var a="<!--SEGWIT_CNT-->"; if (a!="" && a!="0") document.write(a);}</script></i>
-	<td align="right"><i style="color:blue"><script>{var a="<!--EBAD_CNT-->"; if (a!="" && a!="0") document.write(a);}</script></i>
-	<td align="right">{TOTAL_PERCENT}%
-	<td align="right" nowrap="mowrap">{MINER_HASHRATE}
-	<td align="right">{AVG_BLOCK_SIZE}
-	<td align="right"><!--TOTAL_FEES-->
-	<td align="right"><!--FEE_PER_BYTE-->
-	<td align="right">
-<script>
-	inerton({MINER_ID})
-</script>
-</tr>
